[package]
name = "hardin-valley-reform"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.22.0", features = ["csr"] }
yew-router = "0.19.0"
wasm-bindgen = "0.2"
gloo = "0.11"
chrono = { version = "0.4", features = ["wasmbind"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
sqlite-wasm-rs = "0.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
# We need to enable all the web-sys features we want to use!
features = [
    "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
]