[package]
name = "hardin-valley-reform"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.22.0", features = ["csr"] }
yew-router = "0.19.0"
gloo = "0.11"
chrono = { version = "0.4", features = ["wasmbind"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgrest = "1.0"
dotenvy = "0.15.7"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
wasm-bindgen-test = "0.3"